// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeContent /> render() renders the component 1`] = `
<div
  className="center-text middle-page"
>
  <h4>
    homeContent:addCreateNote
  </h4>
</div>
`;

exports[`<HomeContent /> render() renders the component with empty notes list 1`] = `
<div
  className="center-text middle-page"
>
  <h4>
    homeContent:thereIsNoNotesYetCreate
  </h4>
</div>
`;
